--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "use-debounce": "^9.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
